--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Movie Night Invite</title>
+    <title>You're Invited</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
@@ -11,13 +11,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body class="page" id="page1">
-    <audio id="bg-music" src="audio/bg-music.mp3" loop></audio>
+<body class="page" id="page2">
     <div class="overlay">
-        <h1 class="title">HI, ACIK NABILATUN NISA!</h1>
+        <h1 class="title">YOU'RE INVITED TO</h1>
         <img src="./img/sticker.png" alt="sticker" class="sticker">
-        <div class="reminder" id="reminder1">Tap anywhere to continue 🙈</div>
+        <div class="reminder" id="reminder2">Tap anywhere to continue 🙈</div>
     </div>
-     <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
