bg music function

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Movie Night Invite</title>
+    <title>Movie Date Invitation</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body class="page" id="page1">
-    <audio id="bg-music" src="audio/bg-music.mp3" loop></audio>
     <div class="overlay">
         <h1 class="title">HI, ACIK NABILATUN NISA!</h1>
         <img src="./img/sticker.png" alt="sticker" class="sticker">
