icon and info-box update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Movie Date Invitation</title>
+  <title>Movie Invitation</title>
+  <link rel="icon" href="img/icon.png" type="image/png">
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
@@ -25,7 +26,7 @@
     <div class="overlay">
       <h1 class="title">YOU'RE INVITED TO</h1>
       <img src="./img/sticker.png" alt="sticker" class="sticker" /><br>
-      <div class="reminder" id="reminder2">Tap anywhere to continue 🙈</div>
+      <p class="caption">Tap anywhere to continue 🙈</p>
     </div>
   </section>
 
@@ -33,7 +34,7 @@
     <div class="overlay">
       <h1 class="title">MOVIE DATE W ME</h1>
       <img src="./img/sticker.png" alt="sticker" class="sticker" /><br>
-      <div class="reminder" id="reminder3">Tap anywhere to continue 🙈</div>
+      <p class="caption">Tap anywhere to continue 🙈</p>
     </div>
   </section>
 
